--- a/src/components/home/style/Investment-station.less
+++ b/src/components/home/style/Investment-station.less
@@ -1,8 +1,277 @@
 @import url("../../../style/theme.less");
 .page{
   background-image: url('../../../assets/bg2.png');
-  min-height: 15rem;
- .cen{
-   padding: 0.2rem;
- }
+  min-height: 17rem;
+  .cen-title{
+    padding:0 .2rem;
+  }
+  .cen{
+    padding: 0.2rem 0;
+    .img{
+      width: 1.25rem;
+      margin: 0 auto;
+      img{
+        width: 100%;
+      }
+    }
+    .title{
+      color: @fff;
+      font-size: 0.22rem;
+      text-align: center;
+      margin: 0.2rem 0 0.3rem 0;
+    }
+    .xiaz{
+      background: url('../../../assets/cen3.png')no-repeat;
+      background-size: 100% 100%;
+      height: 0.7rem;
+      width: 90%;
+      display: flex;
+      align-items: center;
+      margin: 0 auto;
+      flex-wrap: wrap;
+      .left-img{
+        flex: 0 0 0.4rem;
+        max-width: 0.4rem;
+        margin-left: 0.5rem;
+        img{
+          width: 100%;
+        }
+      }
+      .right-txt{
+        flex: 1;
+        color: @eee;
+        margin-left: 0.25rem;
+      }
+    }
+    .text{
+      text-align: center;
+      line-height: 0.3rem;
+      margin-top: 0.25rem;
+      .t{
+        color: @eee;
+        font-size: @fd;
+      }
+      .c{
+        color: #31b3a9;
+      }
+      .y{
+        color: @eee;
+        font-size: 0.12rem;
+      }
+
+    }
+    .cen-model{
+      min-height: 3rem;
+      background: url('../../../assets/cen2.png')no-repeat;
+      background-size: 100% 100%;
+      margin-top: 0.22rem;
+      padding-bottom: 0.48rem;
+      .top{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 auto;
+        justify-content: center;
+        padding-top: 0.5rem;
+      }
+      .list{
+        flex: 0 0 0.8rem;
+        text-align: center;
+        
+        .to{
+          font-size: 0.11rem;
+          color: #b4b5b6;
+        }
+        .mis{
+          font-size: 0.13rem;
+          color: #bccbe4;
+          margin-top: 0.1rem;
+        }
+      }
+      .line{
+        width: 0.01rem;
+        height: 0.5rem;
+        background: linear-gradient(#333,#fff,#333) ;
+      }
+      .label-text{
+        width: 75%;
+        margin:  0.4rem auto 0.01rem;
+        color: @fff;
+      }
+      .jindu{
+        width: 75%;
+        margin: 0.4rem auto 0.2rem;
+        height: 0.22rem;
+        position: relative;
+        .tis-cens{
+          position: absolute;
+          margin-left: -0.24rem;
+          top: -0.5rem;
+          width: 0.4rem;
+          text-align: center;
+          z-index: 99;
+          height: 0.5rem;
+          animation: opacitys 5s;
+          .txtt{
+            color: @fff;
+            font-weight: bold;
+          }
+          .linet{
+            height: 0.52rem;
+            position: absolute;
+            left: 0.2rem;
+            width: 0.01rem;
+            top: 0.2rem;    
+            background: @fff;      
+          }
+        }
+        .ul{
+          width: 100%;
+          height: 0.22rem;
+          margin-left: -0.04rem;
+          overflow: hidden;
+          background: rgb(105, 104, 104);
+          border-radius: 0.15rem;
+          animation: identifier 2s;
+        }
+        .li{
+          background: linear-gradient(to right,#e2b9f5,#d05ffe);
+          height: 0.22rem;
+          float: left;
+          vertical-align: middle;
+        }
+        .li2{
+          background: linear-gradient(to right,#b3cdda,#32aae2)
+        }
+        .li3{
+          background: linear-gradient(to right,#b7e0dd,#3eecdf)
+        }
+        .yuan{
+          width: 0.4rem;
+          height:0.4rem;
+          border-radius: 50%;
+          overflow: hidden;
+          text-align: center;
+          line-height: 0.4rem;
+          font-size: @fs;
+          position: absolute;
+          right: -0.14rem;
+          color: @333;
+          animation: opacitys2 5s;
+          background: linear-gradient(to right,#aed3c1,#00ff81);
+          top: -0.1rem;
+          opacity: 0.85;
+          z-index: 9;
+        }
+        @keyframes opacitys {
+          0%{
+            opacity: 0;
+          }
+          100%{
+            opacity: 1;
+          }
+        }
+        @keyframes opacitys2 {
+          0%{
+            opacity: 0;
+          }
+          100%{
+            opacity: 0.85;
+          }
+        }
+        @keyframes identifier {
+          0%{
+            width: 0%;
+          }
+          100%{
+            width: 100%;
+          }
+        }
+      }
+      .hzongs{
+        .lut{
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          .lis{
+            margin-right: 0.1rem;
+            .lt{
+              width: 0.1rem;
+              height: 0.1rem;
+              display: inline-block;
+            }
+            .la{
+              background: linear-gradient(to right,#e2b9f5,#d05ffe)
+            }
+            .lb{
+              background: linear-gradient(to right,#b3cdda,#32aae2)
+            }
+            .lc{
+              background: linear-gradient(to right,#b7e0dd,#3eecdf)
+            }
+            &:nth-child(3){
+              margin-right: 0;
+            }
+            .t{
+              display: inline-block;
+              margin-left: 0.05rem;
+              font-size: @fm;
+              color: #818181;
+            }
+          }
+        }
+        .tis{
+          font-size: @fm;
+          text-align: center;
+          color: #818181;
+          margin-top: 0.15rem;
+        }
+      }
+    }
+    .ul-list{
+      padding:0 0.35rem;
+      margin:0 auto;
+      margin-top: 0.25rem;
+      .list{
+        display: flex;
+        flex-wrap: wrap;
+        .lic{
+          text-align: left;
+          color: #d5d6d8;
+          font-size: @fd;
+          line-height: 0.55rem;
+        }
+        .lb,.lc{
+          flex: 0 0 30%;
+          max-width: 30%;
+          text-align: center;
+        }
+        .la{
+          flex: 0 0 40%;
+          max-width: 40%;
+        }
+       
+      } 
+      .list-lit{
+        .lic{
+          font-size: 0.11rem;
+          color: #888888;
+        }
+      }
+    }
+    .touszi{
+      width: 2.5rem;
+      margin: 0.25rem auto 0;
+      img{
+        width: 100%;
+      }
+    }
+    
+  }
+  .bottom-bg{
+    height:2.8rem;
+    width: 100%;
+    background: url('../../../assets/iconimg.png')no-repeat;
+    background-size: 100% 100%;
+  }
 }
